# fastapi_bazel_server

./: .gitignore  BUILD  Dockerfile  MODULE.bazel  WORKSPACE  gazelle_python.yaml
app/: BUILD  BUILD.bazel  main.py
app/orm/: some.py
