"Bazel dependencies"
# Reference: Bzlmod Migration Guide.
module(
    name = "ds_docsci",
    version = "0.0.0",
    compatibility_level = 1,
    repo_name = "ds_docsci",
)

# Check dependencies in Bazel Central Registry

bazel_dep(
    name="aspect_bazel_lib",
    version="2.7.1"
)
bazel_dep(
    name="gazelle",
    version="0.34.0",
    repo_name="bazel_gazelle"
)

bazel_dep(
    name="rules_python",
    version="0.31.0",
)

bazel_dep(
    name="rules_python_gazelle_plugin",
    version="0.31.0",
)

python = use_extension(
    "@rules_python//python/extensions:python.bzl", "python"
)

python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version="3.11"
)

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl", "pip"
)

pip.parse(
    hub_name="pip",
    python_version="3.11",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(
    pip,
    "pip"
)