load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//fastapi",
        "@pip//uvicorn",
    ],
)

py_library(
    name = "app",
    srcs = [
        "__init__.py",
        "main.py",
        "orm/some.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//fastapi",
        "@pip//uvicorn",
    ],
)
